a good state before adding more data

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div><span id="lblAdvice">建议：</span><div id="advice" class="muted"></div></div>
 </div>
 <div class="chartWrap" style="position:relative">
-<canvas id="chart" width="900" height="420"></canvas>
+<canvas id="chart" width="900" height="420" style="border:1px solid #e2e8f0;border-radius:4px;background:rgba(255,255,255,0.5)"></canvas>
 <div id="tooltip" class="tooltip"></div>
 </div>
 <div id="marketChartsArea" style="display:flex;flex-direction:column;gap:10px;margin-top:20px;">
@@ -100,12 +100,12 @@
   </div>
   <!-- Gold Chart -->
   <div class="market-chart-container" style="position:relative;">
-    <div style="font-size:12px;font-weight:bold;margin-bottom:4px;color:#475569">黄金 (Gold)</div>
+    <div style="font-size:12px;font-weight:bold;margin-bottom:4px;color:#475569">黄金 (Gold) (USD/oz)</div>
     <canvas id="chartGold" width="900" height="150" style="border:1px solid #e2e8f0;border-radius:4px;background:rgba(255,255,255,0.5)"></canvas>
   </div>
   <!-- Oil Chart -->
   <div class="market-chart-container" style="position:relative;">
-    <div style="font-size:12px;font-weight:bold;margin-bottom:4px;color:#475569">原油 (Crude Oil)</div>
+    <div style="font-size:12px;font-weight:bold;margin-bottom:4px;color:#475569">原油 (Crude Oil) (USD/bbl)</div>
     <canvas id="chartOil" width="900" height="150" style="border:1px solid #e2e8f0;border-radius:4px;background:rgba(255,255,255,0.5)"></canvas>
   </div>
 </div>
